[project]
name = "comfy-pilot"
description = "MCP server + embedded terminal that lets Claude Code see and edit your ComfyUI workflows"
version = "1.0.24"
license = { file = "LICENSE" }
dependencies = [
    "pywinpty>=2.0.15; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/ConstantineB6/comfy-pilot"

[tool.comfy]
PublisherId = "constantine"
DisplayName = "Comfy Pilot"
Icon = "https://raw.githubusercontent.com/ConstantineB6/comfy-pilot/main/thumbnail.jpg"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
consider_namespace_packages = false
